--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <!--PRORIETE DE LA PAGE-->
     <head>
         <meta charset="UTF8"/>
-        <title>Masato Shiraishi</title>
+        <title>Masato Deweerdt</title>
         <link rel="stylesheet" type="text/css" href="css/default.css">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Open+Sans:wght@300&family=Roboto:wght@100&display=swap" rel="stylesheet">
     </head>
@@ -11,11 +11,11 @@
     <body>
         <header>
         <!-- NAME -->
-            <h1>Masato Shiraishi | Web Designer</h1>
+            <h1>Masato Deweerdt | Web Developper</h1>
         <!-- SPAN -->
             <span class=separator></span>
         <!-- STATUT -->
-            <h2>Sound engineer & front end developper</h2>
+            <h2>Sound engineer & front end web developper</h2>
         <!-- LOGO -->
                 <img src="pictures/logo.png" alt="logo" title="Logo du site" id="logo">
         </header>
@@ -35,9 +35,7 @@
             </section>
         <!-- DESCRIPTION -->
             <section>
-                <p>Je crée des designs et des illustrations
-                pour entreprise. Freelance, je suis front-end 
-                à la recherche de nouvelles expériences.</p>
+                <p>Ceci est mon premier site de test sur lequel je travaille.</p>
             </section>
         <!-- PROJETS -->
             <section>
