--- a/project.html
+++ b/project.html
@@ -15,7 +15,7 @@
     <!-- ENTETE -->
         <header>
     <!-- NAME -->
-            <h1>Masato Shiraishi</h1>
+            <h1>Masato Deweerdt</h1>
     <!-- SPAN -->
             <span class=separator></span>
     <!-- PROJECT NAME -->
@@ -51,7 +51,7 @@
 
     <!-- FOOTER -->
         <footer>
-                <span>2020 &copy; Masato Shiraishi</span>
+                <span>2020 &copy; Masato Deweerdt</span>
             </footer>
     </body>
 </html>
