--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </div>
     <!-- FOOTER -->
         <footer>
-            <span>2020 &copy; Masato Shiraishi</span>
+            <span>2020 &copy; Masato Deweerdt</span>
         </footer>
     </body>
 </html>
